Add an endpoint to delete measures by their trigger's href.
